--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ img {
 .sw-page-theme  {
     background-image: url("images/stars.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: auto 100%;
     background-color: black;
 }
 
@@ -18,9 +18,13 @@ img {
     font-family: 'Press Start 2P', cursive;
 }
 
+.h-cards {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .card {
     background-color: white;
-    width: 40%;
     padding: 10px;
     margin: 10px;
     border: 5px solid grey;
@@ -47,6 +51,7 @@ img {
 
 .card__list {
     font-family: 'Press Start 2P', cursive;
+    max-width: 300px;
 }
 
 .card__image {
@@ -66,6 +71,39 @@ img {
 
 .card__image--dark {
     background-color: red;
+}
+
+.sw-button {
+    width: 100%;
+    height: auto;
+    font-family: 'Press Start 2P', cursive;
+    background-color: white;
+    border: 4px solid black;
+    margin: 5px;
+    padding: 10px;
+    color: blue;
+}
+
+.sw-button--dark {
+    background-color: black;
+    color: white;
+    border-color: red;
+}
+
+.sw-button--dark:hover {
+    color: black;
+    background-color: red;
+}
+
+.sw-button--light {
+    background-color: lightskyblue;
+    color: black;
+    border-color: white;
+}
+
+.sw-button--light:hover {
+    color: lightskyblue;
+    background-color: white;
 }
 
 
